Adjusting padding and 'Class average' text in bulletin

--- a/bulletin/templates/bulletin/window_view.html
+++ b/bulletin/templates/bulletin/window_view.html
@@ -69,8 +69,8 @@
 				 {{ bulletin.content }}
 				{% endautoescape %}
 
-				<div style="padding-left: 80px;padding-right: 80px;">
-					<div align="left" style="font-size:22px; color: #878787; padding-top: 30px;">Confira as suas metas</div>
+				<div style="padding-left: 0px;padding-right: 0px;">
+					<div align="left" style="font-size:22px; color: #878787; padding-top: 0px;">Confira as suas metas</div>
 					<hr style="height:2px; background-color:#878787; margin-top: 5px;">
 					<div class="row">
 					    <div class="col-md-4">
@@ -86,7 +86,7 @@
 				    				<tr>
 				      				<th style="text-align:center">Descrição</th>
 				      				<th style="width:150px; text-align:center">Recomendação </br> do(a) professor(a)</th>
-											<th style="text-align:center">Mádia da turma</th>
+											<th style="text-align:center">Média da turma</th>
 											<th style="text-align:center">Sua meta</th>
 											<th style="text-align:center">Seu resultado</th>
 				    				</tr>
@@ -137,7 +137,7 @@
 							</div>
 					</div>
 				</div>
-				<div style="padding-left: 80px;padding-right: 80px;">
+				<div style="padding-left: 0px;padding-right: 0px;">
 					<div align="left" style="font-size:22px; color: #878787; padding-top: 25px; ">Indicadores relevantes para o seu desempenho</div>
 					<hr style="height:2px; background-color:#878787; margin-top: 5px;">
 					<div class="row" style="padding-left: 15px;" >
@@ -189,7 +189,7 @@
 								</div>
 					</div>
 				</div>
-				<div style=" padding-left: 80px;padding-right: 80px;">
+				<div style=" padding-left: 0px;padding-right: 0px;">
 					<div align="left" style="font-size:22px; color: #878787; padding-top: 15px;"><img src="{% static 'img/warning.png' %}"  height="40" width="50" align= "bottom"/>{% trans 'There are obstructions to your activities?' %}</div>
 					<hr style="height:2px; background-color:#878787; margin-top: 5px;"><br>
 					<div style="background-color:#fff; box-shadow: 1px 1px 10px #c0beaf; margin-top: -20px;">
