--- a/bulletin/templates/bulletin/window_view.html
+++ b/bulletin/templates/bulletin/window_view.html
@@ -143,7 +143,7 @@
 						<table >
 							<tr >
 								<td style="background-color:#002F4B; width: 20px;"></td>
-								<td style="padding-left: 5px;">Seu ressultado</td>
+								<td style="padding-left: 5px;">Seu resultado</td>
 								<td style="width: 20px"></td>
 								<td style="background-color:#009688; width: 20px;"></td>
 								<td style="padding-left: 5px;">Nível acima da mediana dos aprovados</td>
