Modifications in the bulletin view templates

--- a/bulletin/templates/bulletin/view.html
+++ b/bulletin/templates/bulletin/view.html
@@ -64,7 +64,7 @@
 					<hr style="height:2px; background-color:#878787; margin-top: 5px;">
 					<div class="row">
 							<div class="col-md-4">
-								<div style="font-size:16px; color: #000; padding-botom: 10px;"><b>Metas Atingidas</b></div>
+								<div align="center" style="font-size:16px; color: #000; padding-botom: 10px;"><b>Metas Atingidas</b></div>
 								<div id="donut_chart" align="center"></div>
 							</div>
 
