Changing pendencies notification alert color

--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -383,7 +383,7 @@ a.add-row {
   color: #FF0000; }
 
 .alert-low {
-  background-color: #FFD800; }
+  background-color: #dfbd31; }
 
 .alert-medium {
   background-color: #FF9000; }
