--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -526,7 +526,7 @@ a.add-row
     color: #FF0000
 
 .alert-low
-    background-color: #FFD800 
+    background-color: #dfbd31 
 
 .alert-medium
     background-color: #FF9000
