--- a/notifications/templates/notifications/_ajax_history.html
+++ b/notifications/templates/notifications/_ajax_history.html
@@ -62,7 +62,7 @@
 							<td>{{ notification.task.resource }}</td>
 							<td>{{ notification.task.get_action_display }}</td>
 							<td>{{ notification.task.end_date|date:"SHORT_DATE_FORMAT"|default:_('Not Informed') }}</td>
-							<td>{{ notification.level|warning_msg }}</td>
+							<td>{{ notification.level|warning_msg:False }}</td>
 							<td>{{ notification.viewed|viewed_msg }}</td>
 							<td>{{ notification|observation }}</td>
 						</tr>
