--- a/notifications/templates/notifications/subject.html
+++ b/notifications/templates/notifications/subject.html
@@ -70,7 +70,11 @@
 			    {% else %}
 			    	<div class="text-center no-subjects">
 		                <i class="fa fa-exclamation-triangle"></i>
-		                <h4>{% trans 'You do not posses any pendency in this subject' %}</h4>
+		                {% if has_subject_permissions %}
+							<h4>{% trans 'The student do not posses any pendency.' %}</h4>
+						{% else %}
+		                	<h4>{% trans 'You do not posses any pendency in this subject' %}</h4>
+		                {% endif %}
 		            </div>
 			    {% endif %}
 			{% else %}
