--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -72,29 +72,23 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="row">
-
-
+                    <div class="row login_subcommands">
                         {% if not deny_register %}
                             <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
                                     <a class="pull-right" href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
                                     <li class="dropdown language-selector pull-right " style="margin-top:1px;margin-right:10px;">
                                         {% get_current_language as LANGUAGE_CODE %}
+                                        
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
-
-
-                                           <span >[{{LANGUAGE_CODE}}]  </span>
-
+                                            <span >[{{LANGUAGE_CODE}}]  </span>
                                         </a>
                                         <a href="{% url 'themes:contrast' %}" id = "contrast_button" style="margin-left:10px;"><i class="glyphicon glyphicon-adjust"></i></a>
                                         <ul class="dropdown-menu">
-
-
                                             {% get_available_languages as LANGUAGES %}
                                             {% get_language_info_list for LANGUAGES as languages %}
+                                            
                                             {% for language in languages %}
-
                                                 <li {% if language.code == LANGUAGE_CODE %}
                                                     class="active"
                                                 {% endif %}>
@@ -102,7 +96,6 @@
                                                         <span>{{language.code}}</span>
                                                     </a>
                                                 </li>
-
                                             {% endfor %}
                                         </ul>
                                     </li>
