--- a/pdf_file/templates/pdf_file/_form.html
+++ b/pdf_file/templates/pdf_file/_form.html
@@ -25,8 +25,9 @@
 			</div>
 		{% endif %}
 	</div>
-<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
-		{% render_field form.file class='file-selector' %}
+	
+	<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+		{% render_field form.file class='file-selector' data-max_size="10" data-mimetypes=mimeTypes %}
 		
 		<div class="input-group common-file-input">
 	      	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
@@ -51,18 +52,29 @@
 
 		<span id="helpBlock" class="help-block">{{ form.file.help_text }}</span>
 			
-		{% if form.file.errors %}
-			<div class="alert alert-danger alert-dismissible" role="alert">
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				<ul>
-					{% for error in form.file.errors %}
-						<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</div>
-		{% endif %}
+	</div>
+	
+	{% if form.file.errors %}
+		<div class="alert alert-danger alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			<ul>
+				{% for error in form.file.errors %}
+					<li>{{ error }}</li>
+				{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
+
+	<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible client-file-errors" style="display:none" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		<ul>
+			<li class="size" style="display:none">{% trans "The file is too large. It should have less than 10MB." %}</li>
+			<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
+		</ul>
 	</div>
 
 	<legend>{% trans 'Common resources settings' %}</legend>
