--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -45,19 +45,29 @@
 			  		</div>
 
 					<span id="helpBlock" class="help-block">{{ form.image.help_text }}</span>
+				</div>
 
-					{% if form.image.errors %}
-						<div class="alert alert-danger alert-dismissible" role="alert">
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							<ul>
-								{% for error in form.image.errors %}
-									<li>{{ error }}</li>
-								{% endfor %}
-							</ul>
-						</div>
-					{% endif %}
+				{% if form.image.errors %}
+					<div class="alert alert-danger alert-dismissible" role="alert">
+							<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						<ul>
+							{% for error in form.image.errors %}
+								<li>{{ error }}</li>
+							{% endfor %}
+						</ul>
+					</div>
+				{% endif %}
+
+				<div class="alert alert-danger alert-dismissible client-file-errors" style="display:none" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					<ul>
+						<li class="size" style="display:none">{% trans "The image is too large. It should have less than 5MB." %}</li>
+						<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
+					</ul>
 				</div>
 			</form>
 		</div>
@@ -225,10 +235,33 @@
 	// file selection
 	function FileSelectHandler(e) {
 		var files = e.target.files || e.dataTransfer.files,
-			parent = $(e.target.offsetParent);
+			parent = $(e.target.offsetParent),
+			max_size = 5*1024*1024;
+
+		$(".client-file-errors").hide();
+		$(".size").hide();
+		$(".format").hide();
+		$("#button").prop('disable', false);
+		$("#button").prop('disabled', false);
 
 		// process all File objects
 		for (var i = 0, f; f = files[i]; i++) {
+			if (f.size > max_size) {
+				$("#button").prop('disable', true);
+				$("#button").prop('disabled', true);
+
+				$(".client-file-errors").show();
+				$(".size").show();
+			} 
+
+			if (!f.type.match(/^image\//)) {
+				$("#button").prop('disable', true);
+				$("#button").prop('disabled', true);
+
+				$(".client-file-errors").show();
+				$(".format").show();
+			}
+			
 			parent.find('.filedrag').html(f.name);
 		}
 	}
